Added base functionality of the Banking app. Including Entity, Service, Controller and access to mySQL db.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=banking-spring-boot
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_sp
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
